*** When upgrading, don't forget to: "cd bin ; ./install.pl" ***
*** Also, it is _highly_ advisable to backup your data before upgrading ***

Version 1.9.2

* Fixed problem with Subversion repositories on Win32, where
  Codestriker was unable to launch the svn program.

* Comments containing '+' characters were changed into ' ' characters
  when posted via AJAX.  Other potentially damaging characters are now
  escaped.

* Comments with '\' characters are now displayed correctly in all
  cases within the tooltip window.

* Temporary files were not being deleted within the
  CodestrikerClient.pm module (used for auto-creation of topics on CVS
  commits).  Reported by Martin Apel <Martin.Apel@softlab.de>.

Version 1.9.1

* Correct problem introduced in 1.9.0 release where the email address
  field in the add comment tooltip was not being stored correctly in
  the Codestriker cookie.  For reviewers who have never created a
  Codestriker topic, the email field not remember the previous value.
  This has now been corrected.

* When adding a comment via a link from an email, the confirmation
  screen now contains links to the topic text and topic comments, for
  convenience.

Version 1.9.0

* Now using overlib javascript library
  (http://www.bosrup.com/web/overlib) for formatted "tooltips".  When
  the mouse hovers over a line where a comment has been made, a
  formatted "tooltip" window appears, which contains the comment text
  formatted appropriately, with author and date header information
  bolded.  The tooltip is not removed until the mouse is moved off the
  line.  Help text on the create topic and search screens have been
  modified to use this tooltip library as well as opposed to
  javascript alert windows.

* Comments are now added view an overlib tooltip window, rather than
  using a separate browser window.  This speeds up the reviewing
  process and keeps the reviewer focussed on a single browser window.
