@@ -1,5 +1,5 @@
 Codestriker
-Copyright (c) 2001, 2002, 2003, 2004 David Sitsky.  All rights reserved.
+Copyright (c) 2001 - 2006 David Sitsky.  All rights reserved.
 sits@users.sourceforge.net
 
 *** Please read the CHANGELOG file for details on changes ***
