@@ -161,6 +161,19 @@ $codestriker_css = '';
      'clearcase:c:\\stuff\\view_name\\vob_name'
     );
 
+# A mapping of repository URLs to names.  In any screen where a
+# repository is displayed, if there is a mapping for the repository
+# defined here, then the symbolic name will be displayed instead of
+# its raw URL.  This is useful when the URL contains sensitive
+# username/password information, or the symbolic name is more
+# meaningful to the end-user.  If there is no mapping defined for a
+# specific repository, its URL will be displayed.
+$repository_name_map =
+{
+    '/home/sits/cvs' => 'Local CVS',
+    ':pserver:sits:password@cvs.sourceforge.net:/cvsroot' => 'SF CVS'
+};
+
 # A mapping of repositories to filename viewers.  Examples of such systems
 # would be CVSweb and ViewCVS, for local repositories.  Mappings are
 # not required for remote CVSweb and ViewCVS repositories, as they are
